Update CI for Java11